--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <!-- Load environment variables -->
+  <script src="assets/env.js"></script>
 </head>
 <body>
 <app-root></app-root>
